--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -41,6 +41,8 @@
 
     </form>
 
+
+    <!-- HERE WE SHOULD CREATE A DROPDOWN MENU TO CHOOSE NMF/ COSINE -->
     <a href="https://github.com/ccuevasd/movie_recommender">
       Take a loot at our repository
     </a>
