--- a/flask_app/templates/_base.html
+++ b/flask_app/templates/_base.html
@@ -11,6 +11,18 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <img id="logo" src="/static/img/logo-small.png" alt="Cartamon Logo">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+
+      </div>
+    </div>
+  </nav>
     {% block content %}
 
     {% endblock %}
