--- a/flask_app/templates/recommendation.html
+++ b/flask_app/templates/recommendation.html
@@ -16,5 +16,13 @@
       {% endfor %}
 
     </ul>
+
+    <div class="button-container">
+
+  <button onclick="location.href='/'" type="submit" class="btn btn-light m-5">
+    Go back to the main page
+  </button>
+
+</div>
   </body>
 </html>
