--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -6,11 +6,8 @@
 <a href="/recommendation"> Don't know what to watch? Click here!</a>
 <br />
 <br />
-<br />
-<br />
-<br />
 
-      <form action="/recommendation" method="get">>
+      <form action="/recommendation" method="get">
         <section class="main-splash">
 
           <h3 class="merp">Provide Ratings for some Movies</h3>
@@ -31,7 +28,7 @@
             <div class="form-group">
               <label for="formGroupExampleInput">Enter a Movie</label>
               <input type="text"  name="movie3" value="{{choices[2]}}" placeholder="Type in a movie you like." required />
-              <input type="text"  name="rating3" placeholder="0.0 - 5.0" required/> -->
+              <input type="text"  name="rating3" placeholder="0.0 - 5.0" required/>
                 <br />
             </div>
 
@@ -42,7 +39,7 @@
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
                 <a href="#">Link 3</a>
-            </div>-->
+            </div>
 
                         <!-- <input type="submit" />
               <br />
