--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -95,7 +95,7 @@
 
 <!-- HERE WE SHOULD CREATE A DROPDOWN MENU TO CHOOSE NMF/ COSINE -->
 <a href="https://github.com/ccuevasd/movie_recommender">
-  Take a loot at our repository
+  Take a look at our repository
 </a>
 
 {% endblock %}
