--- a/flask_app/templates/_base.html
+++ b/flask_app/templates/_base.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-    <img id="logo" src="/static/img/logo-small.png" alt="Cartamon Logo">
+    <!-- <img id="logo" src="/static/img/logo-small.png" alt="Cartamon Logo"> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
