--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -3,7 +3,7 @@
 <!-- What we want users to see goes in the body  [CTRL+Shift+7]-->
 <h1>Movie Recommendations!</h1>
 <!--#Optional arguments: <a href="" style= class= id= </a>  -->
-<a href="/recommendation"> Don't know what to watch? Click here!</a>
+<!-- <a href="/recommendation"> Don't know what to watch? Click here!</a> -->
 <br />
 <br />
 
@@ -15,20 +15,20 @@
           <!-- <form> -->
             <div class="form-group">
               <label for="formGroupExampleInput">Enter a Movie</label>
-              <input type="text"  name="movie1" value="{{choices[0]}}" placeholder="Type in a movie you like." required />
-              <input type="text"  name="rating1" placeholder="0.0 - 5.0" required/>
+              <input type="text"  name="movie1" value="{{choices[0]}}" placeholder="Type in a movie you like." />
+              <input type="text"  name="rating1" placeholder="0.0 - 5.0" />
                 <br />
             </div>
             <div class="form-group">
               <label for="formGroupExampleInput">Enter a Movie</label>
-              <input type="text"  name="movie2" value="{{choices[1]}}" placeholder="Type in a movie you like." required />
-              <input type="text"  name="rating2" placeholder="0.0 - 5.0" required/>
+              <input type="text"  name="movie2" value="{{choices[1]}}" placeholder="Type in a movie you like."  />
+              <input type="text"  name="rating2" placeholder="0.0 - 5.0" />
                 <br />
             </div>
             <div class="form-group">
               <label for="formGroupExampleInput">Enter a Movie</label>
-              <input type="text"  name="movie3" value="{{choices[2]}}" placeholder="Type in a movie you like." required />
-              <input type="text"  name="rating3" placeholder="0.0 - 5.0" required/>
+              <input type="text"  name="movie3" value="{{choices[2]}}" placeholder="Type in a movie you like."  />
+              <input type="text"  name="rating3" placeholder="0.0 - 5.0" />
                 <br />
             </div>
 
@@ -48,8 +48,40 @@
               </select>
               <button type="submit" class="btn btn-danger btn-lg m-3">Submit</button>
               <!-- <input type="submit" /> -->
-
             </div>
+
+            <br />
+            <br />
+
+            <h3 class="merp">...or give us your favourite genre!</h3>
+            <div class="button-container">
+              <label for="buttoncontainerExampleInput">Which genre do you prefer?</label>
+              <select id="genre" name="genre">
+              <option value="None">None</option>
+              <option value="Action">Action</option>
+              <option value="Adventure">Adventure</option>
+              <option value="Animation">Animation</option>
+              <option value="Children">Children</option>
+              <option value="Comedy">Comedy</option>
+              <option value="Crime">Crime</option>
+              <option value="Documentary">Documentary</option>
+              <option value="Drama">Drama</option>
+              <option value="Fantasy">Fantasy</option>
+              <option value="Film Noir">Film Noir</option>
+              <option value="Horror">Horror</option>
+              <option value="IMAX">IMAX</option>
+              <option value="Musical">Musical</option>
+              <option value="Mystery">Mystery</option>
+              <option value="Romance">Romance</option>
+              <option value="Sci-Fi">Sci-Fi</option>
+              <option value="Thriller">Thriller</option>
+              <option value="War">War</option>
+              <option value="Western">Western</option>
+              </select>
+              <button type="submit" class="btn btn-danger btn-lg m-3">Submit</button>
+              <!-- <input type="submit" /> -->
+            </div>
+
 
             <!--
                 <button type="submit" class="btn btn-danger btn-lg m-3">Submit</button>
